Updated to Godot 4.1

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-
-# Godot-specific ignores
-.import/
 .godot/
-export.cfg
-export_presets.cfg
-
-# Mono-specific ignores
-.mono/
-data_*/
+*.kra~
+*.blend1
